--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@lwc/engine-server": "^5.1.0",
-    "lwc": "^5.1.0",
+    "@lwc/engine-server": "5.1.0",
+    "lwc": "5.1.0",
     "tinybench": "^2.5.1"
   }
 }
