--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@lwc/engine-server": "5.1.0",
     "lwc": "5.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tinybench": "^2.5.1"
   }
 }
